packages/kit/test/apps/basics/src/routes/errors/page-endpoint/post-explicit.js
export const get = () => {
	return {
		status: 400,
		body: new Error('oops')
	};
};
